--- a/BeerList/Utils/UIViews/TableViewCells/BeerDetail/BeerDetailTableViewCell.xib
+++ b/BeerList/Utils/UIViews/TableViewCells/BeerDetail/BeerDetailTableViewCell.xib
@@ -7,6 +7,8 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -21,7 +23,7 @@
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KAd-W2-UGT">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
-                        <color key="backgroundColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.88235294117647056" green="0.87450980392156863" blue="0.88235294117647056" alpha="0.98657570422535212" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="KAd-W2-UGT" secondAttribute="height" multiplier="1:1" id="Zcu-O0-Bco"/>
                         </constraints>
@@ -44,25 +46,37 @@
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zM5-G6-gDn">
+                        <rect key="frame" x="254.5" y="25" width="38.5" height="38.5"/>
+                        <state key="normal" image="heartIconNoSelected"/>
+                        <connections>
+                            <action selector="favoriteAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Mc5-au-nI9"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="Fk5-Gh-nQX" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="2Aw-mc-BG3"/>
                     <constraint firstAttribute="trailing" secondItem="TLg-HT-rFa" secondAttribute="trailing" constant="10" id="4Io-wU-Tlj"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="zM5-G6-gDn" secondAttribute="trailing" constant="11" id="52Z-0x-xTW"/>
                     <constraint firstAttribute="bottom" secondItem="Fk5-Gh-nQX" secondAttribute="bottom" constant="14.5" id="5fs-ey-nRC"/>
                     <constraint firstItem="IFU-w4-JNP" firstAttribute="top" secondItem="KAd-W2-UGT" secondAttribute="bottom" constant="14" id="6wd-vp-DyP"/>
+                    <constraint firstItem="zM5-G6-gDn" firstAttribute="height" secondItem="KAd-W2-UGT" secondAttribute="height" multiplier="0.12" id="BAg-jM-Moc"/>
                     <constraint firstAttribute="trailing" secondItem="IFU-w4-JNP" secondAttribute="trailing" constant="10" id="Cgl-zj-7j9"/>
                     <constraint firstItem="TLg-HT-rFa" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="DGI-kv-TvB"/>
                     <constraint firstAttribute="trailing" secondItem="Fk5-Gh-nQX" secondAttribute="trailing" constant="10" id="EUH-vT-9MQ"/>
                     <constraint firstItem="IFU-w4-JNP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="FSE-46-F87"/>
+                    <constraint firstItem="zM5-G6-gDn" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="14" id="GR7-YD-vMJ"/>
                     <constraint firstItem="KAd-W2-UGT" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" id="J7j-HZ-COq"/>
                     <constraint firstItem="TLg-HT-rFa" firstAttribute="top" secondItem="IFU-w4-JNP" secondAttribute="bottom" constant="5.5" id="TA9-yi-HID"/>
                     <constraint firstItem="KAd-W2-UGT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="cld-Xt-ATi"/>
+                    <constraint firstItem="zM5-G6-gDn" firstAttribute="width" secondItem="KAd-W2-UGT" secondAttribute="width" multiplier="0.12" id="lfp-Ee-eeV"/>
                     <constraint firstItem="KAd-W2-UGT" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="mhE-By-Vj9"/>
                     <constraint firstItem="Fk5-Gh-nQX" firstAttribute="top" secondItem="TLg-HT-rFa" secondAttribute="bottom" constant="17" id="uuy-is-q6g"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="descriptionLabel" destination="Fk5-Gh-nQX" id="2dY-h5-ClY"/>
+                <outlet property="favoriteIconButton" destination="zM5-G6-gDn" id="2En-L1-mfO"/>
                 <outlet property="nameLabel" destination="IFU-w4-JNP" id="PRQ-BJ-heE"/>
                 <outlet property="photoImageView" destination="KAd-W2-UGT" id="uVx-ai-M58"/>
                 <outlet property="tagLabel" destination="TLg-HT-rFa" id="csV-2e-lz8"/>
@@ -70,4 +84,7 @@
             <point key="canvasLocation" x="34" y="-35.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="heartIconNoSelected" width="512" height="512"/>
+    </resources>
 </document>
