--- a/BeerList/Utils/UIViews/TableViewCells/BeerCell/BeerTableViewCell.xib
+++ b/BeerList/Utils/UIViews/TableViewCells/BeerCell/BeerTableViewCell.xib
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,21 +21,21 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TII-Tg-vb2">
-                        <rect key="frame" x="0.0" y="0.0" width="66" height="70.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="65.5" height="74"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="66" id="44g-kW-nZI"/>
-                            <constraint firstAttribute="height" constant="70.5" id="pep-9z-Hnc"/>
+                            <constraint firstAttribute="width" secondItem="TII-Tg-vb2" secondAttribute="height" multiplier="31:35" id="Wdu-To-JQ6"/>
+                            <constraint firstAttribute="height" constant="74" id="pep-9z-Hnc"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E15-B8-EVO">
-                        <rect key="frame" x="74" y="6" width="202" height="34.5"/>
+                        <rect key="frame" x="73.5" y="6" width="202.5" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="tag" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DkC-Gm-pPt">
-                        <rect key="frame" x="74" y="46.5" width="202" height="14.5"/>
+                        <rect key="frame" x="73.5" y="29" width="202.5" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
@@ -58,6 +59,7 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="descriptionLabel" destination="DkC-Gm-pPt" id="ita-Ug-UQs"/>
+                <outlet property="imageHeightConstraint" destination="pep-9z-Hnc" id="PCR-5c-GU7"/>
                 <outlet property="nameLabel" destination="E15-B8-EVO" id="tnB-7D-0B7"/>
                 <outlet property="photoImageView" destination="TII-Tg-vb2" id="y0b-3C-QfV"/>
             </connections>
